--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,8 @@ services:
     image: zoeyvid/git-updater:latest
     restart: always
     network_mode: bridge
-    environment:
-      - "TZ=Europe/Berlin"
     volumes:
       - "/path/to/git-repo:/src"
+    environment:
+      - "TZ=Europe/Berlin"
+    user: root
